syntax = "proto3";

option java_multiple_files = true;
option java_package = "top.kwseeker.msa.action.basicone.api.grpc.proto";
option java_outer_classname = "AccountServiceProto";
//option objc_class_prefix = "HLW"; //Objective-C 类前缀

service AccountService {
  rpc pay(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string userId = 1;
  string orderId = 2;
  int32 amount = 3;
}

message PaymentResponse {
  int32 result = 1;
}
